# ppt-builder

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: package.yml
.kiro/specs/: style-consistency-spec.md
docs/: index.html
scripts/: package.mjs  package.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  config.yaml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/skeletons/: 5W2H分析法.md  AIDA模型.md  FAB框架.md  PDCA循环.md  PREP框架.md  PSB框架.md  SCQA框架.md  STAR框架.md  What-Why-How框架.md  英雄之旅.md
src-tauri/src/: brainstorm.rs  config.rs  error_log.rs  image_commands.rs  lib.rs  main.rs  outline.rs  pdf.rs  pptx.rs  project.rs  skeleton.rs  style.rs  style_guide.rs  template.rs
src-tauri/src/ai/: imggen.rs  llm.rs  mod.rs
src-tauri/src/image/: alpha.rs  components.rs  elements_gen.rs  mod.rs  splitter.rs
src-tauri/src/ocr/: README.md  calibration.rs  color_analysis.rs  engine.rs  layout_recovery.rs  mod.rs  native_shapes.rs  text_mask.rs
src-tauri/src/pptx_export/: editable.rs  mod.rs  simple.rs  template_based.rs
src-tauri/styles/: business.md  default.md  sunshine.md  wechat.md
src-tauri/templates/default/: README.md  template.pptx
src/components/: AdherenceLevelPicker.vue  ApiConfigForm.vue  ImageCard.vue  ImagePromptEditModal.vue  ImageSizeSelector.vue  LayoutFamilyPicker.vue  MarkdownEditor.vue  OutlineModeSelector.vue  ProgressBar.vue  Sidebar.vue  StyleEditor.vue  StylePicker.vue  TemplatePicker.vue
src/locales/: en-US.ts  index.ts  zh-CN.ts
(+15 files in other folders)
